--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="display: flez; justify-content: center"></div>
+    <div id="root"></div>
   </body>
 </html>
