--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
+    <link
+      rel="shortcut icon"
+      href="../src/components/images/LogoCat.jpg"
+      type="image/jpg"
+    />
     <title>Dedottag</title>
   </head>
   <body id="body">
