--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
     />
     <link
       rel="shortcut icon"
-      href="../src/components/images/LogoCat.jpg"
-      type="image/jpg"
+      href="./png-transparent-cat-kitten-humour-puppy-mouse-cat-face-cat-like-mammal-animals.png"
     />
     <title>Dedottag</title>
   </head>
