--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
     <link
-      rel="shortcut icon"
+      rel="icon"
       href="./png-transparent-cat-kitten-humour-puppy-mouse-cat-face-cat-like-mammal-animals.png"
     />
     <title>Dedottag</title>
